Test/errors/err_field_init_arg_no_struct.cb
void takeInt(int x) { }

extern int main()
{
    expect_error("field initializer: cannot infer struct type for argument position 0") {
        takeInt({ x=1 });
    }
    return 0;
}
